# resource/app/uploadfile/router.js
@@ -6,24 +6,24 @@ const router = require("express").Router();
 // UPLOADED IMAGE FILE ============================================
 router.post(
   "/img",
-  uploadConfig.uploadFileImagesConfig.array("proffs", 10),
+  uploadConfig.uploadFileImagesConfig.array("proofs", 10),
   controller.uploadFile,
 );
 router.put(
   "/img/:id",
-  uploadConfig.uploadFileImagesConfig.array("proffs", 10),
+  uploadConfig.uploadFileImagesConfig.array("proofs", 10),
   controller.uploadFileUpdate,
 );
 
 // UPLOADED DOCUMENT FILE ==========================================
 router.post(
   "/doc",
-  uploadConfig.uploadFileDocumentConfig.array("proffs", 10),
+  uploadConfig.uploadFileDocumentConfig.array("proofs", 10),
   controller.uploadFile,
 );
 router.put(
   "/doc/:id",
-  uploadConfig.uploadFileDocumentConfig.array("proffs", 10),
+  uploadConfig.uploadFileDocumentConfig.array("proofs", 10),
   controller.uploadFileUpdate,
 );
 
